Update footer with LinkedIn link and add new SVG illustrations

--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -353,7 +353,7 @@
           </div>
           <div class="col-md-6 text-center text-md-end">
             <p>
-              Created by <a href="https://github.com/varshitha127">LAKKIREDDY VARSHITHA</a> | 
+              Created by <a href="https://www.linkedin.com/in/lakkireddy-varshitha-127/">LAKKIREDDY VARSHITHA</a> | 
               <a href="https://github.com/varshitha127/Bloodbank_Project" target="_blank">Open Source</a>
             </p>
           </div>
