--- a/templates/polls/donor_registration.html
+++ b/templates/polls/donor_registration.html
@@ -1,4 +1,6 @@
 {% extends 'polls/base.html' %}
+{% load widget_tweaks %}
+
 {% block title %}
 <title>Donor Registration - Blood Management System</title>
 {% endblock %}
