Add widget_tweaks template tag to search and contact templates

--- a/templates/polls/search.html
+++ b/templates/polls/search.html
@@ -1,4 +1,6 @@
 {% extends 'polls/base.html' %}
+{% load widget_tweaks %}
+
 {% block title %}
 <title>Search Blood Donors - Blood Management System</title>
 {% endblock %}
